Implementação de teste de controller com Insomnia e ControllerAdvice para bad_request

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_pedidos
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_pedidos_test
 spring.datasource.username=postgres
 spring.datasource.password=root
 server.port=8080
@@ -10,6 +10,4 @@ spring.jpa.show-sql=true
 spring.database.driverClassName=org.postgresql.Driver
 #spring.sql.init.mode=always
 #spring.datasource.initialization-mode=always
-spring.mvc.throwExceptionIfNoHandlerFound=true
-
 
