Testes unitários OK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,6 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.database.driverClassName=org.postgresql.Driver
-#spring.sql.init.mode=always
-#spring.datasource.initialization-mode=always
 spring.mvc.throwExceptionIfNoHandlerFound=true
-
-
+spring.jpa.hibernate.ddl.auto=update
+spring.sql.init.mode=always
