--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_pedidos_test
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_pedidos
 spring.datasource.username=postgres
 spring.datasource.password=root
 server.port=8080
@@ -8,6 +8,5 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.database.driverClassName=org.postgresql.Driver
-#spring.sql.init.mode=always
-#spring.datasource.initialization-mode=always
-
+spring.mvc.throwExceptionIfNoHandlerFound=true
+spring.jpa.hibernate.ddl.auto=update
